--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,8 @@ body {
   padding: 0;
   font-family: sans-serif;
   /* background-image: linear-gradient(-225deg, #f30000 0%, #2fec00 52%, #0400fd 100%); */
-  background-image:  url("../img/font.jpg");
+  /* background-image:  url("../img/font.jpg"); */
+  background-color: aqua;
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100%;
