--- a/css/styles.css
+++ b/css/styles.css
@@ -54,3 +54,31 @@ textarea {
 svg {
   width: 21px;
 }
+
+
+.img{
+  margin: 10px;
+ 
+}
+
+.contImg{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+input[type= "file" ]{
+  display: none;
+}
+
+.labelFoto{
+  background-color: blueviolet;
+  padding: 10px;
+  color: white;
+  border-radius: 10px;
+  width: 60%;
+  text-align: center;
+}
+.labelFoto:hover{
+  color: black;
+}
